--- a/WWW/security.tex
+++ b/WWW/security.tex
@@ -87,20 +87,20 @@ correlate requests and responses based on timing information.  To address this t
 \system{} could employ techniques used in previous research, such as implementing timing 
 delays, at different proxies (either client or exit proxies).
 
-\textbf{Sybil Attacks.} An adversary who runs {\it many} exit proxies can learn information 
-about many clients and many content requests as they are responsible for encrypting/decrypting 
-{\it many} requests and responses.  Previous work has analyzed the security of DHTs in this 
-context~\cite{geambasu2009experiences,wolchok2010defeating}.  \system{} can employ a few different defenses to limit the probability and size 
-of a Sybil attack.  To limit the number of exit proxies running on a single machine, \system{} can 
-limit the number of exit proxies with the same IP address (which is a part of the exit proxy's self-certifying 
-identifier) to one; therefore, the attack becomes more 
-expensive as the number of machines the adversary must control increases.\footnote{Note also that this 
-countermeasure prevents two or more exit proxies from being behind the same NAT.}  This defense can be 
-expanded to entire network prefixes; for example, if a large (malicious) organization owns an entire prefix, 
-they could launch a Sybil attack using various IP addresses within their network.  \system{} could 
-limit the number of IP addresses in a given prefix to either one (which may result in a smaller set of 
-exit proxies) or some small number (in which case the size of the Sybil is extremely small and cannot achieve 
-its goal of being in a certain location on the hashing ring).  
+%\textbf{Sybil Attacks.} An adversary who runs {\it many} exit proxies can learn information 
+%about many clients and many content requests as they are responsible for encrypting/decrypting 
+%{\it many} requests and responses.  Previous work has analyzed the security of DHTs in this 
+%context~\cite{geambasu2009experiences,wolchok2010defeating}.  \system{} can employ a few different defenses to limit the probability and size 
+%of a Sybil attack.  To limit the number of exit proxies running on a single machine, \system{} can 
+%limit the number of exit proxies with the same IP address (which is a part of the exit proxy's self-certifying 
+%identifier) to one; therefore, the attack becomes more 
+%expensive as the number of machines the adversary must control increases.\footnote{Note also that this 
+%countermeasure prevents two or more exit proxies from being behind the same NAT.}  This defense can be 
+%expanded to entire network prefixes; for example, if a large (malicious) organization owns an entire prefix, 
+%they could launch a Sybil attack using various IP addresses within their network.  \system{} could 
+%limit the number of IP addresses in a given prefix to either one (which may result in a smaller set of 
+%exit proxies) or some small number (in which case the size of the Sybil is extremely small and cannot achieve 
+%its goal of being in a certain location on the hashing ring).  
 
 \textbf{Flashcrowds.}  A flashcrowd is a large spike in traffic to a specific web
 page. An attacker
