dealt with inline comments

--- a/WWW/intro.tex
+++ b/WWW/intro.tex
@@ -19,7 +19,7 @@ political landscape suggests that CDNs may soon face liability for the content
 that they host. For example, the European Union has been considering laws that
 would remove safe harbor protection on copyright infringement for online
 service providers if they do not deploy tools that can automatically inspect
-and remove infringing content~\cite{eu-copyright}\paul{ do these examples still hold? Updates?}. In the United States,
+and remove infringing content~\cite{eu-copyright}. In the United States,
 various laws under consideration threaten aspects of Section 230 of the
 Communications Decency Act~\cite{sec230}, which protects CDNs from federal
 criminal liability for the content that they host. Tussles surrounding speech,
@@ -52,7 +52,7 @@ can often be inferred from relative popularity in a distribution of web
 requests, even when the requests themselves are encrypted. Additionally, the
 \system{} design assumes a strong attack model (Section~\ref{sec:threat}),
 whereby an adversary can request logs from the CDN, interact with \system{} as
-a client, a proxy\paul{drop this?}, or a publisher, and mount coordinated attacks that depend on
+a client, or a publisher, and mount coordinated attacks that depend on
 multiple such capabilities. Our threat model does not include active attempts
 to disrupt the system (\eg, blocking access to parts of the system, mounting
 denial of service attacks), but it includes any type of attack
