--- a/WWW/paper.bib
+++ b/WWW/paper.bib
@@ -130,6 +130,13 @@
   howpublished = {\url{https://www.law.cornell.edu/uscode/text/47/230}}
 }
 
+
+@misc{netenforementact,
+  title = "{Act to Improve Enforcement of the Law in Social Networks}",
+  key = "{Network Enforcement Act}",
+  howpublished = {\url{https://www.bmjv.de/SharedDocs/Gesetzgebungsverfahren/Dokumente/NetzDG_engl.pdf;jsessionid=829D39DBDAC5DE294A686E374126D04E.1_cid289?__blob=publicationFile&v=2}}
+}
+
 @inproceedings{karger1997consistent,
   title={Consistent hashing and random trees: Distributed caching protocols for relieving hot spots on the World Wide Web},
   author={Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
@@ -444,6 +451,12 @@
   title = "{Balancing Child Protection and Digital Rights}",
   key = "{balancing}",
   howpublished = {\url{https://medium.com/@jmalcolm/balancing-child-protection-and-digital-rights-1b9c4ab0b93f}}
+}
+
+@misc{fosta_sesta,
+  title = "{FOSTA-SESTA is now law—where does that leave the Internet?}",
+  key = "{FOSTA-SESTA}",
+  howpublished = {\url{https://www.privateinternetaccess.com/blog/2018/05/fosta-sesta-is-now-law-where-does-that-leave-the-internet/}}
 }
 
 @misc{medium_copyright,
