updated bib and design text

--- a/WWW/background.tex
+++ b/WWW/background.tex
@@ -90,7 +90,7 @@ about the integrity of content because a CDN can impersonate the publisher from 
 
 \subsection{Open Legal Questions}
 %  In the 
-%copyright realm, the European Commision is considering legislation that would remove safe harbor protection against copyright law for 
+%copyright realm, the European Commission is considering legislation that would remove safe harbor protection against copyright law for 
 %online service providers if they host infringing content, regardless of the provenance of that content. 
 
 Various parties are battling in the courts over cases that pertain to user
