--- a/WWW/paper.bib
+++ b/WWW/paper.bib
@@ -134,7 +134,7 @@
 @misc{netenforementact,
   title = "{Act to Improve Enforcement of the Law in Social Networks}",
   key = "{Network Enforcement Act}",
-  howpublished = {\url{https://www.bmjv.de/SharedDocs/Gesetzgebungsverfahren/Dokumente/NetzDG_engl.pdf;jsessionid=829D39DBDAC5DE294A686E374126D04E.1_cid289?__blob=publicationFile&v=2}}
+  howpublished = {\url{https://www.bmjv.de/SharedDocs/Gesetzgebungsverfahren/Dokumente/NetzDG_engl.pdf}}
 }
 
 @inproceedings{karger1997consistent,
